# CrossShim

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CrossShimConfig.cmake.in
include/: bionic_types.h  cross_shim.h  debug_log.h  elf_loader.h  emu_backend.h  emu_compat.h  hle_brk_state.h  hle_env_state.h  hle_exit_state.h  hle_format.h  hle_manager.h  hle_mmap_state.h  hle_path_translation.h  hle_scan.h  hle_sched_state.h  hle_signal_state.h  hle_stdio_state.h  hle_virtual_threads.h  memory_manager.h  qemu_api.h  relocation_handler.h  session_tracer.h  syscall_handler.h  thread_manager.h  tls_manager.h
include/qemu/: qemu_bridge_generated.h  qemu_libafl_bridge.h  qemu_wrapper.h
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: lib.rs
scripts/: build_qemu_libafl.sh
scripts/patches/: 0001-null-check-signal-handler.patch  0002-null-check-get-task-state.patch
src/: cross_shim_runner.cpp  elf_loader.cpp  emulator.cpp  hle_libc.cpp  hle_libm.cpp  memory_manager.cpp  qemu_stubs.cpp  relocation_handler.cpp  session_tracer.cpp  syscall_handler.cpp  thread_manager.cpp  tls_manager.cpp
src/hle/: hle_crypto.cpp  hle_ctype.cpp  hle_dir.cpp  hle_file.cpp  hle_format.cpp  hle_io.cpp  hle_locale.cpp  hle_math.cpp  hle_mem_ops.cpp  hle_memory.cpp  hle_misc.cpp  hle_network.cpp  hle_process.cpp  hle_pthread.cpp  hle_scan.cpp  hle_sched.cpp  hle_search.cpp  hle_setjmp.cpp  hle_signal.cpp  hle_stdlib.cpp  hle_string.cpp  hle_sysconf.cpp  hle_syslog.cpp  hle_time.cpp  hle_user.cpp  hle_wchar.cpp
stubs/: build_stub.sh  qemu_stub  qemu_stub.S
test/: build_cooperative_test.sh  build_individual_tests.sh  build_ndk.sh  emu_test_runner.cpp  main.cpp  run_emulator_tests.sh  run_individual_tests.sh  test_atomics.c  test_atomics_standalone.c  test_cooperative_threading.c  test_ctype.c  test_dir.c  test_emulator_main.c  test_exec.c  test_exec_helper.c  test_fp_simple.c  test_hle_fp.c  test_indirect_call.c  test_math.c  test_memory.c  test_networking.c  test_openssl.c  test_pipe.c  test_printf_fp.c  test_printf_only.c  test_signal.c  test_stdio.c  test_stdlib.c  test_string.c  test_strtod_only.c  test_thread_stress.c  test_threading.c  test_time.c  test_tls.c  test_wchar.c
test/bionic/: .gitignore  README.md  build.sh  excluded_tests.conf  ndk_disabled_tests.conf  run.sh  setup.sh
test/bionic/shim/: BionicDeathTest.h  SignalUtils.h  TemporaryFile.h  gtest_globals.h  utils.h
test/bionic/shim/android-base/: file.h  macros.h  parseint.h  scopeguard.h  silent_death_test.h  stringprintf.h  strings.h  test_utils.h  threads.h  unique_fd.h
test/bionic/shim/private/: ScopedSignalHandler.h  bionic_constants.h  bionic_time_conversions.h  get_cpu_count_from_string.h
test/ndk_build/: test_atomics  test_atomics_lse  test_atomics_standalone  test_cooperative_threading  test_cooperative_threading_arm64  test_ctype  test_dir  test_emulator_arm64  test_exec  test_exec_helper  test_fp_simple  test_hle_fp  test_indirect_call  test_math  test_memory  test_networking  test_pipe  test_printf_fp  test_printf_only  test_signal  test_stdio  test_stdlib  test_string  test_strtod_only  test_threading  test_time  test_tls  test_wchar
wrapper_generator/: pyproject.toml  run_tests.sh
wrapper_generator/android_wrapper_generator/: __init__.py  cli.py  code_generator.py  symbol_extractor.py  wrapper_generator.py
wrapper_generator/android_wrapper_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wrapper_generator/tests/: __init__.py  conftest.py  test_cli.py  test_code_generator.py  test_e2e.py  test_symbol_extractor.py  test_wrapper_generator.py
