[package]
name = "libafl_qemu_bridge"
version = "1.0.0"
edition = "2021"
description = "C FFI bridge to LibAFL QEMU for CrossShim"
authors = ["WyzeBridge"]

[lib]
name = "libafl_qemu_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# LibAFL QEMU for ARM64 usermode emulation
# NOTE: Commented out until we determine the correct feature flags and API usage
# The actual integration will be done in Phase 3 (Emulator Core Rewrite)
# libafl_qemu = { version = "0.15", default-features = false, features = ["usermode"] }
# libafl_qemu_sys = "0.15"

# For FFI string handling
libc = "0.2"

# For thread-safe global state
once_cell = "1.19"
parking_lot = "0.12"

[build-dependencies]
# Generate C header from Rust code
cbindgen = "0.27"

[features]
default = ["aarch64"]
aarch64 = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
