[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-wrapper-generator"
version = "1.0.0"
description = "Generate host shared library wrappers for Android ARM64 shared libraries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WyzeBridgeDotNet", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
]
keywords = ["android", "arm64", "emulator", "wrapper", "ndk"]
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
android-wrapper-gen = "android_wrapper_generator.cli:main"

[project.urls]
Homepage = "https://github.com/example/android-wrapper-generator"
Repository = "https://github.com/example/android-wrapper-generator"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_wrapper_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

